# lotb

./: .envrc  .gitignore  .pre-commit-config.yaml  .tmuxp.yaml  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  data.json  docker-compose-example.yaml  flake.nix  justfile  pyproject.toml  taskfile.yaml
.github/: dependabot.yaml
.github/workflows/: ci-pre-commit.yaml  ci.yaml  image.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_493a7a473bc3511e_assistant_py.html  z_493a7a473bc3511e_image_py.html  z_493a7a473bc3511e_llm_py.html  z_493a7a473bc3511e_memo_py.html  z_493a7a473bc3511e_notes_py.html  z_493a7a473bc3511e_prometheus_alerts_py.html  z_493a7a473bc3511e_quote_py.html  z_493a7a473bc3511e_readwise_py.html  z_493a7a473bc3511e_remindme_py.html  z_493a7a473bc3511e_rssfeed_py.html  z_493a7a473bc3511e_socialfix_py.html  z_493a7a473bc3511e_welcome_py.html  z_79f8ff9a15849264_config_py.html  z_79f8ff9a15849264_plugin_class_py.html  z_79f8ff9a15849264_version_py.html  z_94b9a375908193f6___init___py.html  z_94b9a375908193f6_assistant_py.html  z_94b9a375908193f6_config_py.html  z_94b9a375908193f6_history_py.html  z_94b9a375908193f6_mcp_manager_py.html  z_94b9a375908193f6_prompts_py.html  z_94b9a375908193f6_simple_py.html  z_94b9a375908193f6_tool_handler_py.html  z_d505b2d476814bdd_lotb_py.html
lotb/: lotb.py
lotb/common/: config.py  plugin_class.py  version.py
lotb/plugins/: assistant.py  image.py  llm.py  memo.py  notes.py  prometheus_alerts.py  quote.py  readwise.py  remindme.py  rssfeed.py  socialfix.py  welcome.py
lotb/plugins/_llm/: __init__.py  assistant.py  config.py  history.py  mcp_manager.py  prompts.py  simple.py  tool_handler.py
test/: config_test.py  conftest.py  lotb_test.py  plugin_assistant_test.py  plugin_class_test.py  plugin_image_test.py  plugin_llm_test.py  plugin_memo_test.py  plugin_notes_test.py  plugin_prometheus_alerts_test.py  plugin_quote_test.py  plugin_readwise_test.py  plugin_remindme_test.py  plugin_rssfeed_test.py  plugin_socialfix_test.py  plugin_welcome_test.py
