[tool.poetry]
name = "lotb"
version = "0.3.2"
description = "Lord of the Telegram bots"
authors = ["brokenpip3 <brokenpip3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
lotb = "lotb.lotb:main"

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = {extras = ["job-queue"], version = "^22.5"}
feedparser = "^6.0.12"
python-dateutil = "^2.9.0.post0"
typing-extensions = "^4.15.0"
litellm = "1.80.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.2.0"
types-python-dateutil = "^2.9.0.20251115"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
pythonpath = ["lotb"]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
follow_imports_for_stubs = true
disallow_untyped_defs = false

[tool.coverage.run]
relative_files = true
omit = [".venv"]

[tool.coverage.report]
fail_under = 70
skip_empty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
